2013-08-21  Paolo Carlini  <paolo.carlini@oracle.com>

* call.c (build_new_method_call_1): Use INDIRECT_REF_P.
	* cp-tree.h (REFERENCE_REF_P): Likewise.
	* semantics.c (finish_offsetof): Likewise.


/cp
2013-08-21  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/56130
	* semantics.c (finish_id_expression): Handle deprecated references.

/testsuite
2013-08-21  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/56130
	* g++.dg/warn/deprecated-7.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@201906 138bc75d-0d04-0410-961f-82ee72b054a4